--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.11.0",
     "react-multi-carousel": "^2.8.4",
     "react-redux": "^8.1.2",
     "tailwindcss": "3.3.2",
